--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./JS/register.js"></script>
+    <script src="./JS/signup.js"></script>
 </body>
 </html>
 
